--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -2,11 +2,12 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 333px;
 }
 .header__title {
     font-weight: 700;
     font-size: 3rem;
-    line-height: 1.5rem;
+    line-height: 1.4rem;
 }
 .text-weight-light {
     font-weight: 300;
@@ -22,16 +23,4 @@
     line-height: 2rem;
     padding-top: 24px;
     padding-bottom: 24px;
-}
-
-.header__button {
-}
-
-.header__btn {
-    font-size: 20px;
-    border-radius: 10px;
-    margin-right: 24px;
-    margin-bottom: 0;
-    font-weight: 700;
-    text-transform: uppercase;
 }
