--- a/sass/blocks/_skins-market.scss
+++ b/sass/blocks/_skins-market.scss
@@ -1,8 +1,10 @@
 .skins-market {
-    background-color: #A5A6F6;
+    background-color: $second_color;
     box-shadow: 0 13px 49px 0 rgb(18 19 20 / 59%);
     display: grid;
     grid-template-columns: 210px auto;
-    min-height: 1350px;
+    padding: 15px 0 0 20px;
+    min-height: 350px;
     border-radius: 4px;
+    position: relative;
 }
