--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,3 +1,5 @@
+//это плохо, лучше конкретным ссылкам давать сброс, а не вообще всем,
+//например .link
 a {
     text-decoration: none;
     text-transform: uppercase;
