--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -9,6 +9,7 @@
     font-size: 3rem;
     line-height: 1.4rem;
 }
+//это здесь лишнее среди стилей блока .header
 .text-weight-light {
     font-weight: 300;
 }
