--- a/sass/blocks/_login.scss
+++ b/sass/blocks/_login.scss
@@ -7,6 +7,7 @@
     gap: 5px;
 }
 
+//опять же, в .login это лишнее, это отдельный блок
 .balance {
     padding: 8px;
     font-size: 14px;
@@ -14,6 +15,7 @@
     border-radius: 10px;
 }
 
+//опять же, в .login это лишнее, это отдельный блок
 .avatar__img {
     border-radius: 33px;
     border: 2px solid transparent;
