--- a/sass/blocks/_navigation-list.scss
+++ b/sass/blocks/_navigation-list.scss
@@ -1,3 +1,4 @@
+//если это navigation-list, то стили для nav-list здесь лишние, это отдельный файл
 .nav__list {
     display: flex;
     padding-inline-start : 0;
