--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,5 +1,10 @@
-a {
+.link {
     text-decoration: none;
     text-transform: uppercase;
     color: inherit;
+}
+button {
+    border: none;
+    background-color: transparent;
+    padding: 0;  
 }
