--- a/sass/blocks/_header.scss
+++ b/sass/blocks/_header.scss
@@ -9,14 +9,11 @@
     font-size: 3rem;
     line-height: 1.4rem;
 }
-.text-weight-light {
+.header__subtitle {
+    font-size: 3rem;
+    line-height: 0;
     font-weight: 300;
 }
-
-.header__title-light {
-    font-weight: 300;
-}
-
 .header__info {
     font-weight: 500;
     font-size: 1.5rem;
