--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,4 @@
 //base
-
-@import "./base/vars";
 @import "./base/reset";
 @import "./base/base";
 
@@ -11,10 +9,15 @@
 @import "./blocks/logo";
 @import "./blocks/navigation-list";
 @import "./blocks/login";
+@import "./blocks/balance";
+@import "./blocks/avatar";
 @import "./blocks/skins-market";
 @import "./blocks/sidebar";
+@import "./blocks/form-list";
+@import "./blocks/form-content";
 @import "./blocks/skins-collection";
 @import "./blocks/controls";
+@import "./blocks/market-cart";
 @import "./blocks/pagination";
 @import "./blocks/footer";
 
