--- a/sass/blocks/_controls.scss
+++ b/sass/blocks/_controls.scss
@@ -2,40 +2,57 @@
     display: grid;
     grid-template-columns: 47% 53%;
     padding-bottom: 14px;
-}
-.controls__left {
-    display: grid;
-    grid-template-columns: 58px 110px auto;
-}
-.controls__right {
-    text-align: right;
-}
-.controls__reload {
-    font-size: 20px;
-    padding-right: 15px;
-    padding-left: 15px;
-    color: $main-color;
-    margin-top: 5px;
-    opacity: .5;
-    transition: 0.6s linear;
-    &:hover {
-        opacity: 1;
+    &__left {
+        display: grid;
+        grid-template-columns: 58px 110px auto;
+    }
+    &__right {
+        display: flex;
+        justify-content: end;
+    }
+    &__reload {
+        font-size: 20px;
+        padding-right: 15px;
+        padding-left: 15px;
+        color: $main-color;
+        margin-top: 5px;
+        opacity: .5;
+        transition: 0.6s linear;
+        &:hover {
+            opacity: 1;
+        }
+    }
+    &__search {
+        position: relative;
+    }
+    &__input {
+        background: var(--white-color);
+        border: none;
+        height: 38px;
+        box-sizing: border-box;
+        outline: 0;
+        padding-left: 35px;
+        padding-right: 30px;
+        border-radius: 5px;
+    }
+    &__sort {
+        display: inline-block;
+        padding-right: 10px;
+        margin-right: 10px;
+        font-weight: 600;
+        opacity: 0.5;
+        padding-top: 7px;
+        border: none;
+        color: var(--main-color);
+        background-color: var(--second-color);
+        &:hover {
+            opacity: 1;
+        }
     }
 }
-.controls__search {
-    position: relative;
-}
-.search__input {
-    background: $white-color;
-    border: none;
-    height: 38px;
-    box-sizing: border-box;
-    outline: 0;
-    padding-left: 35px;
-    padding-right: 30px;
-    border-radius: 5px;
-}
 .fa-search{
+    padding: 5px;
+    cursor: pointer;
     position: absolute;
     top: 12px;
     left: 12px;
@@ -43,36 +60,8 @@
     transition: 0.2s all;
     padding: 0;
     pointer-events: none;
-}
-.controls__sort {
-    display: inline-block;
-    padding-right: 20px;
-    font-weight: 600;
-    opacity: 0.5;
-    padding-top: 7px;
-    &:hover {
-        opacity: 1;
-    }
-}
-.market-cart__sum {
-    padding-right: 10px;
-    
-}
-.controls__market-cart {
-    display: inline-block;
-    vertical-align: top;
-    cursor: pointer;
-    position: relative;
-    margin-right: 20px;
-    margin-top: 8px;
-}
-i {
-    padding: 5px;
-    cursor: pointer;
-}
-.fa {
     display: inline-block;
     font: normal normal normal 14px/1 FontAwesome;
     font-size: inherit;
     text-rendering: auto;
-} 
+}
