--- a/sass/blocks/_navigation-list.scss
+++ b/sass/blocks/_navigation-list.scss
@@ -1,4 +1,4 @@
-.nav__list {
+.navigation-list {
     display: flex;
     padding-inline-start : 0;
     &--open {
@@ -13,21 +13,20 @@
         background: #bfbfbf;
         border-radius: 10px;
     }
-}
-.navigation__link {
-    padding: 8px;
-    font-size: 14px;
-    transition: 0.6s linear;
-    &:hover {
-        background: $background-color;
-        border-radius: 10px;
+    &__item {
+        margin-right: 24px;
+        list-style-type: none;
     }
-    &--active {
-        font-weight: 1000;
+    &__link {
+        padding: 8px;
+        font-size: 14px;
+        transition: 0.6s linear;
+        &:hover {
+            background: var(--background-color);
+            border-radius: 10px;
+        }
+        &--active {
+            font-weight: 1000;
+        }
     }
 }
-.navigation__item {
-    margin-right: 24px;
-    list-style-type: none;
-}
-
