--- a/sass/blocks/_pagination.scss
+++ b/sass/blocks/_pagination.scss
@@ -8,11 +8,11 @@
     border-radius: 4px;
     transition: 0.6s linear;
     &--active {
-        background: $main-color;
-        color: $white-color;
+        background: var(--main-color);
+        color: var(--white-color);
     }
     &:hover {
-        background: $main-color;
-        color: $white-color;
+        background: var(--main-color);
+        color: var(--white-color);
     }
 }
