--- a/sass/blocks/_form-list.scss
+++ b/sass/blocks/_form-list.scss
@@ -40,7 +40,7 @@
     font-size: 12px;
     font-weight: 600;
     text-transform: uppercase;
-    color: $main-color;
+    color: var(--main-color);
     cursor: pointer;
     opacity: .5;
     transition: 0.6s linear;
