--- a/sass/blocks/_item.scss
+++ b/sass/blocks/_item.scss
@@ -1,13 +1,9 @@
-.skins-list {
-    display: grid;
-    grid-template-columns: 20% 20% 20% 20% 20%;
-}
-.skins-list__item {
+.item {
     background: var(--white-color);
     position: relative;
     height: 220px;
     display: inline-block;
-    color: $main-color;
+    color: var(--main-color);
     border: 1px solid var(--second-color);
     border-right: none;
     border-bottom: none;
@@ -23,7 +19,7 @@
         }
     }
 }
-.skin-info {
+.item__skin-info {
     &:after {
         content: ' / ';
         color: #b5b6b7;
