--- a/css/main.css
+++ b/css/main.css
@@ -13,7 +13,7 @@ button {
 
 body {
   font-family: "Montserrat", sans-serif;
-  color: #8b00ff;
+  color: var(--main-color);
 }
 
 .container {
@@ -112,7 +112,7 @@ body {
   transition: 0.6s linear;
 }
 .navigation-list__link:hover {
-  background: rgba(155, 193, 255, 0.3647058824);
+  background: var(--background-color);
   border-radius: 10px;
 }
 .navigation-list__link--active {
@@ -131,7 +131,7 @@ body {
 .balance {
   padding: 8px;
   font-size: 14px;
-  background: rgba(155, 193, 255, 0.3647058824);
+  background: var(--background-color);
   border-radius: 10px;
 }
 
@@ -144,11 +144,11 @@ body {
   height: 55px;
 }
 .avatar__img:hover {
-  border: 2px solid #8b00ff; /* Ширина, вид и цвет рамки */
+  border: 2px solid var(--main-color); /* Ширина, вид и цвет рамки  */
 }
 
 .skins-market {
-  background-color: #A5A6F6;
+  background-color: var(--second_color);
   box-shadow: 0 13px 49px 0 rgba(18, 19, 20, 0.59);
   display: grid;
   grid-template-columns: 210px auto;
@@ -198,13 +198,13 @@ body {
   height: 36px;
   width: 100%;
   border-radius: 4px;
-  border: 1px solid #fff;
+  border: 1px solid var(--white-color);
   text-align: center;
   line-height: 36px;
   font-size: 12px;
   font-weight: 600;
   text-transform: uppercase;
-  color: #8b00ff;
+  color: var(--main-color);
   cursor: pointer;
   opacity: 0.5;
   transition: 0.6s linear;
@@ -217,7 +217,7 @@ body {
 
 .form__content {
   padding-bottom: 15px;
-  border-bottom: 2px solid #8b00ff;
+  border-bottom: 2px solid var(--main-color);
   margin-bottom: 10px;
 }
 
@@ -231,7 +231,7 @@ body {
 }
 
 .field__price {
-  background: #fff;
+  background: var(--white-color);
   border: none;
   height: 26px;
   width: 100%;
@@ -255,13 +255,13 @@ body {
   grid-template-columns: 20% 20% 20% 20% 20%;
 }
 
-.skins-list__item {
-  background: #fff;
+.item {
+  background: var(--white-color);
   position: relative;
   height: 220px;
   display: inline-block;
-  color: #8b00ff;
-  border: 1px solid #A5A6F6;
+  color: var(--main-color);
+  border: 1px solid var(--second-color);
   border-right: none;
   border-bottom: none;
   text-decoration: none;
@@ -269,19 +269,19 @@ body {
   border-radius: 5px;
   transition: 0.6s linear;
 }
-.skins-list__item:hover {
+.item:hover {
   background-color: rgba(155, 193, 255, 0.3647058824);
 }
-.skins-list__item:hover .item__to-cart {
-  color: #fff;
-  background-color: #8b00ff;
+.item:hover .item__to-cart {
+  color: var(--white-color);
+  background-color: var(--main-color);
 }
 
-.skin-info:after {
+.item__skin-info:after {
   content: " / ";
   color: #b5b6b7;
 }
-.skin-info:last-child::after {
+.item__skin-info:last-child::after {
   content: "";
 }
 
@@ -367,7 +367,7 @@ body {
   font-size: 20px;
   padding-right: 15px;
   padding-left: 15px;
-  color: #8b00ff;
+  color: var(--main-color);
   margin-top: 5px;
   opacity: 0.5;
   transition: 0.6s linear;
@@ -379,7 +379,7 @@ body {
   position: relative;
 }
 .controls__input {
-  background: #fff;
+  background: var(--white-color);
   border: none;
   height: 38px;
   box-sizing: border-box;
@@ -396,8 +396,8 @@ body {
   opacity: 0.5;
   padding-top: 7px;
   border: none;
-  color: #8b00ff;
-  background-color: #A5A6F6;
+  color: var(--main-color);
+  background-color: var(--second-color);
 }
 .controls__sort:hover {
   opacity: 1;
@@ -443,12 +443,12 @@ body {
   transition: 0.6s linear;
 }
 .pagination__link--active {
-  background: #8b00ff;
-  color: #fff;
+  background: var(--main-color);
+  color: var(--white-color);
 }
 .pagination__link:hover {
-  background: #8b00ff;
-  color: #fff;
+  background: var(--main-color);
+  color: var(--white-color);
 }
 
 .footer {
