--- a/sass/blocks/_controls.scss
+++ b/sass/blocks/_controls.scss
@@ -14,7 +14,7 @@
         font-size: 20px;
         padding-right: 15px;
         padding-left: 15px;
-        color: $main-color;
+        color: var(--main-color);
         margin-top: 5px;
         opacity: .5;
         transition: 0.6s linear;
